crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive search with hash skips reorder.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run
@ expect-milestone: task-select::0
Select a task (↑/↓, Enter to run, type to search):

  › build           echo build app
    lint            echo lint app
    test            echo test app
    lib (packages/lib)
      build         echo build lib
      lint          echo lint lib
      test          echo test lib
      typecheck     echo typecheck lib
    task-select-test (workspace root)
      check         echo check root
      clean         echo clean root
      deploy        echo deploy root
  (…5 more)
@ write: lib#
@ expect-milestone: task-select:lib#:0
Select a task (↑/↓, Enter to run, type to search): lib#

    lib (packages/lib)
  ›   build     echo build lib
      lint      echo lint lib
      test      echo test lib
      typecheck echo typecheck lib
@ write-key: enter
Selected task: lib#build
~/packages/lib$ echo build lib ⊘ cache disabled
build lib
