crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive select with typo.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run buid
@ expect-milestone: task-select:buid:0
Task "buid" not found.
Select a task (↑/↓, Enter to run, type to search): buid

  › build   echo build app
    lib (packages/lib)
      build echo build lib
@ write-key: enter
Selected task: build
~/packages/app$ echo build app ⊘ cache disabled
build app
