crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/verbose with typo enters selector.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run buid --verbose
@ expect-milestone: task-select:buid:0
Task "buid" not found.
Select a task (↑/↓, Enter to run, type to search): buid

  › build   echo build app
    lib (packages/lib)
      build echo build lib
@ write-key: enter
Selected task: build
~/packages/app$ echo build app ⊘ cache disabled
build app


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 0 cache misses • 1 cache disabled
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] app#build: ~/packages/app$ echo build app ✓
      → Cache disabled for built-in command
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
